; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_device_queue_manager.c_execute_queues_cpsch.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_device_queue_manager.c_execute_queues_cpsch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_queue_manager = type { i32, i32 }

@EIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [84 x i8] c"The cp might be in an unrecoverable state due to an unsuccessful queues preemption\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device_queue_manager*, i32, i32)* @execute_queues_cpsch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @execute_queues_cpsch(%struct.device_queue_manager* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device_queue_manager*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.device_queue_manager* %0, %struct.device_queue_manager** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.device_queue_manager*, %struct.device_queue_manager** %5, align 8
  %10 = getelementptr inbounds %struct.device_queue_manager, %struct.device_queue_manager* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32, i32* @EIO, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %4, align 4
  br label %34

16:                                               ; preds = %3
  %17 = load %struct.device_queue_manager*, %struct.device_queue_manager** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @unmap_queues_cpsch(%struct.device_queue_manager* %17, i32 %18, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %16
  %24 = call i32 @pr_err(i8* getelementptr inbounds ([84 x i8], [84 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.device_queue_manager*, %struct.device_queue_manager** %5, align 8
  %26 = getelementptr inbounds %struct.device_queue_manager, %struct.device_queue_manager* %25, i32 0, i32 0
  store i32 1, i32* %26, align 4
  %27 = load %struct.device_queue_manager*, %struct.device_queue_manager** %5, align 8
  %28 = getelementptr inbounds %struct.device_queue_manager, %struct.device_queue_manager* %27, i32 0, i32 1
  %29 = call i32 @schedule_work(i32* %28)
  %30 = load i32, i32* %8, align 4
  store i32 %30, i32* %4, align 4
  br label %34

31:                                               ; preds = %16
  %32 = load %struct.device_queue_manager*, %struct.device_queue_manager** %5, align 8
  %33 = call i32 @map_queues_cpsch(%struct.device_queue_manager* %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %31, %23, %13
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @unmap_queues_cpsch(%struct.device_queue_manager*, i32, i32) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @schedule_work(i32*) #1

declare dso_local i32 @map_queues_cpsch(%struct.device_queue_manager*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
